# leafsee

./: README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
apps/accounts/: models.py
apps/accounts/migrations/: 0001_initial.py
apps/personal_account/: apps.py  models.py
apps/personal_account/migrations/: 0001_initial.py  0002_initial.py
apps/videos/: models.py
apps/videos/migrations/: 0001_initial.py
docker_leafsee/: docker-compose.yml
leafsee/: asgi.py  example.env  settings.py  urls.py  wsgi.py
util_tools/: scripts.py
